src/g4_script/ReColParser.ts
// Generated from g4_script/ReCol.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { ReColListener } from "./ReColListener";
import { ReColVisitor } from "./ReColVisitor";


export class ReColParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly BOOL = 26;
	public static readonly STRING = 27;
	public static readonly NEWLINE = 28;
	public static readonly WS = 29;
	public static readonly COMMENT = 30;
	public static readonly LINE_COMMENT = 31;
	public static readonly PYTHON_COMMENT = 32;
	public static readonly MUL = 33;
	public static readonly DIV = 34;
	public static readonly ADD = 35;
	public static readonly SUB = 36;
	public static readonly AND = 37;
	public static readonly OR = 38;
	public static readonly NOT = 39;
	public static readonly GT = 40;
	public static readonly GE = 41;
	public static readonly LT = 42;
	public static readonly LE = 43;
	public static readonly EQ = 44;
	public static readonly NE = 45;
	public static readonly DECIMAL = 46;
	public static readonly ID = 47;
	public static readonly RULE_input = 0;
	public static readonly RULE_name = 1;
	public static readonly RULE_entityDecl = 2;
	public static readonly RULE_obj = 3;
	public static readonly RULE_entityRule = 4;
	public static readonly RULE_actionStat = 5;
	public static readonly RULE_rulerExpr = 6;
	public static readonly RULE_boolexpr = 7;
	public static readonly RULE_expr = 8;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"input", "name", "entityDecl", "obj", "entityRule", "actionStat", "rulerExpr", 
		"boolexpr", "expr",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'regulation'", "':'", "'Entities'", "'{'", "'}'", "'Rules'", 
		"'.'", "'='", "'['", "']'", "'AND'", "'OR'", "'^'", "'XOR'", "'NOT'", 
		"'Follow'", "'Until'", "'('", "')'", "'GT'", "'GE'", "'LT'", "'LE'", "'EQ'", 
		"'NE'", undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "'*'", "'/'", "'+'", "'-'", "'&'", "'|'", "'!'", "'>'", "'>='", 
		"'<'", "'<='", "'=='", "'!='",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "BOOL", "STRING", 
		"NEWLINE", "WS", "COMMENT", "LINE_COMMENT", "PYTHON_COMMENT", "MUL", "DIV", 
		"ADD", "SUB", "AND", "OR", "NOT", "GT", "GE", "LT", "LE", "EQ", "NE", 
		"DECIMAL", "ID",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ReColParser._LITERAL_NAMES, ReColParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return ReColParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "ReCol.g4"; }

	// @Override
	public get ruleNames(): string[] { return ReColParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return ReColParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ReColParser._ATN, this);
	}
	// @RuleVersion(0)
	public input(): InputContext {
		let _localctx: InputContext = new InputContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ReColParser.RULE_input);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 21;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 0, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 18;
					this.match(ReColParser.NEWLINE);
					}
					}
				}
				this.state = 23;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 0, this._ctx);
			}
			this.state = 24;
			this.name();
			this.state = 28;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ReColParser.NEWLINE) {
				{
				{
				this.state = 25;
				this.match(ReColParser.NEWLINE);
				}
				}
				this.state = 30;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 31;
			this.entityDecl();
			this.state = 35;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ReColParser.NEWLINE) {
				{
				{
				this.state = 32;
				this.match(ReColParser.NEWLINE);
				}
				}
				this.state = 37;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 38;
			this.entityRule();
			this.state = 42;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ReColParser.NEWLINE) {
				{
				{
				this.state = 39;
				this.match(ReColParser.NEWLINE);
				}
				}
				this.state = 44;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public name(): NameContext {
		let _localctx: NameContext = new NameContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ReColParser.RULE_name);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 48;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ReColParser.NEWLINE) {
				{
				{
				this.state = 45;
				this.match(ReColParser.NEWLINE);
				}
				}
				this.state = 50;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 51;
			this.match(ReColParser.T__0);
			this.state = 52;
			this.match(ReColParser.T__1);
			this.state = 53;
			this.match(ReColParser.ID);
			this.state = 57;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 54;
					this.match(ReColParser.NEWLINE);
					}
					}
				}
				this.state = 59;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public entityDecl(): EntityDeclContext {
		let _localctx: EntityDeclContext = new EntityDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ReColParser.RULE_entityDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 60;
			this.match(ReColParser.T__2);
			this.state = 64;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ReColParser.NEWLINE) {
				{
				{
				this.state = 61;
				this.match(ReColParser.NEWLINE);
				}
				}
				this.state = 66;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 67;
			this.match(ReColParser.T__3);
			this.state = 71;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ReColParser.NEWLINE || _la === ReColParser.ID) {
				{
				{
				this.state = 68;
				this.obj();
				}
				}
				this.state = 73;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 74;
			this.match(ReColParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public obj(): ObjContext {
		let _localctx: ObjContext = new ObjContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ReColParser.RULE_obj);
		let _la: number;
		try {
			let _alt: number;
			this.state = 125;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 15, this._ctx) ) {
			case 1:
				_localctx = new NewObjectContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 79;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ReColParser.NEWLINE) {
					{
					{
					this.state = 76;
					this.match(ReColParser.NEWLINE);
					}
					}
					this.state = 81;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 82;
				this.match(ReColParser.ID);
				this.state = 83;
				this.match(ReColParser.T__3);
				this.state = 87;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ReColParser.NEWLINE || _la === ReColParser.ID) {
					{
					{
					this.state = 84;
					this.obj();
					}
					}
					this.state = 89;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 90;
				this.match(ReColParser.T__4);
				this.state = 94;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 91;
						this.match(ReColParser.NEWLINE);
						}
						}
					}
					this.state = 96;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
				}
				}
				break;

			case 2:
				_localctx = new NewAttributeContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 100;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ReColParser.NEWLINE) {
					{
					{
					this.state = 97;
					this.match(ReColParser.NEWLINE);
					}
					}
					this.state = 102;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 103;
				this.match(ReColParser.ID);
				this.state = 107;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 104;
						this.match(ReColParser.NEWLINE);
						}
						}
					}
					this.state = 109;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
				}
				}
				break;

			case 3:
				_localctx = new NewValueContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 113;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ReColParser.NEWLINE) {
					{
					{
					this.state = 110;
					this.match(ReColParser.NEWLINE);
					}
					}
					this.state = 115;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 116;
				this.match(ReColParser.ID);
				this.state = 117;
				this.match(ReColParser.T__1);
				this.state = 118;
				(_localctx as NewValueContext)._value = this._input.LT(1);
				_la = this._input.LA(1);
				if (!(((((_la - 26)) & ~0x1F) === 0 && ((1 << (_la - 26)) & ((1 << (ReColParser.BOOL - 26)) | (1 << (ReColParser.STRING - 26)) | (1 << (ReColParser.DECIMAL - 26)))) !== 0))) {
					(_localctx as NewValueContext)._value = this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 122;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 119;
						this.match(ReColParser.NEWLINE);
						}
						}
					}
					this.state = 124;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
				}
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public entityRule(): EntityRuleContext {
		let _localctx: EntityRuleContext = new EntityRuleContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, ReColParser.RULE_entityRule);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 127;
			this.match(ReColParser.T__5);
			this.state = 131;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ReColParser.NEWLINE) {
				{
				{
				this.state = 128;
				this.match(ReColParser.NEWLINE);
				}
				}
				this.state = 133;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 134;
			this.match(ReColParser.T__3);
			this.state = 138;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ReColParser.NEWLINE || _la === ReColParser.ID) {
				{
				{
				this.state = 135;
				this.actionStat();
				}
				}
				this.state = 140;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 141;
			this.match(ReColParser.T__4);
			this.state = 145;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 18, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 142;
					this.match(ReColParser.NEWLINE);
					}
					}
				}
				this.state = 147;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 18, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public actionStat(): ActionStatContext {
		let _localctx: ActionStatContext = new ActionStatContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, ReColParser.RULE_actionStat);
		let _la: number;
		try {
			let _alt: number;
			this.state = 208;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 27, this._ctx) ) {
			case 1:
				_localctx = new AssignValueContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 151;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ReColParser.NEWLINE) {
					{
					{
					this.state = 148;
					this.match(ReColParser.NEWLINE);
					}
					}
					this.state = 153;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 154;
				this.match(ReColParser.ID);
				this.state = 159;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ReColParser.T__6) {
					{
					{
					this.state = 155;
					this.match(ReColParser.T__6);
					this.state = 156;
					this.match(ReColParser.ID);
					}
					}
					this.state = 161;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 162;
				this.match(ReColParser.T__7);
				this.state = 166;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ReColParser.NEWLINE) {
					{
					{
					this.state = 163;
					this.match(ReColParser.NEWLINE);
					}
					}
					this.state = 168;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 169;
				this.match(ReColParser.T__8);
				this.state = 170;
				this.expr(0);
				this.state = 171;
				this.match(ReColParser.T__9);
				this.state = 175;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 22, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 172;
						this.match(ReColParser.NEWLINE);
						}
						}
					}
					this.state = 177;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 22, this._ctx);
				}
				}
				break;

			case 2:
				_localctx = new AssignRulerContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 181;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ReColParser.NEWLINE) {
					{
					{
					this.state = 178;
					this.match(ReColParser.NEWLINE);
					}
					}
					this.state = 183;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 184;
				this.match(ReColParser.ID);
				this.state = 189;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ReColParser.T__6) {
					{
					{
					this.state = 185;
					this.match(ReColParser.T__6);
					this.state = 186;
					this.match(ReColParser.ID);
					}
					}
					this.state = 191;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 192;
				this.match(ReColParser.T__7);
				this.state = 196;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ReColParser.NEWLINE) {
					{
					{
					this.state = 193;
					this.match(ReColParser.NEWLINE);
					}
					}
					this.state = 198;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 199;
				this.match(ReColParser.T__8);
				this.state = 200;
				this.rulerExpr(0);
				this.state = 201;
				this.match(ReColParser.T__9);
				this.state = 205;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 26, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 202;
						this.match(ReColParser.NEWLINE);
						}
						}
					}
					this.state = 207;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 26, this._ctx);
				}
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public rulerExpr(): RulerExprContext;
	public rulerExpr(_p: number): RulerExprContext;
	// @RuleVersion(0)
	public rulerExpr(_p?: number): RulerExprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: RulerExprContext = new RulerExprContext(this._ctx, _parentState);
		let _prevctx: RulerExprContext = _localctx;
		let _startState: number = 12;
		this.enterRecursionRule(_localctx, 12, ReColParser.RULE_rulerExpr, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 220;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 28, this._ctx) ) {
			case 1:
				{
				_localctx = new NotRuleContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 211;
				this.match(ReColParser.NOT);
				this.state = 212;
				this.rulerExpr(6);
				}
				break;

			case 2:
				{
				_localctx = new NotRuleContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 213;
				this.match(ReColParser.T__14);
				this.state = 214;
				this.rulerExpr(5);
				}
				break;

			case 3:
				{
				_localctx = new ParentsRuleContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 215;
				this.match(ReColParser.T__17);
				this.state = 216;
				this.rulerExpr(0);
				this.state = 217;
				this.match(ReColParser.T__18);
				}
				break;

			case 4:
				{
				_localctx = new ExprRuleContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 219;
				this.boolexpr();
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 248;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 30, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 246;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 29, this._ctx) ) {
					case 1:
						{
						_localctx = new AndRuleContext(new RulerExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ReColParser.RULE_rulerExpr);
						this.state = 222;
						if (!(this.precpred(this._ctx, 12))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 12)");
						}
						this.state = 223;
						this.match(ReColParser.AND);
						this.state = 224;
						this.rulerExpr(13);
						}
						break;

					case 2:
						{
						_localctx = new AndRuleContext(new RulerExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ReColParser.RULE_rulerExpr);
						this.state = 225;
						if (!(this.precpred(this._ctx, 11))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 11)");
						}
						this.state = 226;
						this.match(ReColParser.T__10);
						this.state = 227;
						this.rulerExpr(12);
						}
						break;

					case 3:
						{
						_localctx = new OrRuleContext(new RulerExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ReColParser.RULE_rulerExpr);
						this.state = 228;
						if (!(this.precpred(this._ctx, 10))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 10)");
						}
						this.state = 229;
						this.match(ReColParser.OR);
						this.state = 230;
						this.rulerExpr(11);
						}
						break;

					case 4:
						{
						_localctx = new OrRuleContext(new RulerExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ReColParser.RULE_rulerExpr);
						this.state = 231;
						if (!(this.precpred(this._ctx, 9))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
						}
						this.state = 232;
						this.match(ReColParser.T__11);
						this.state = 233;
						this.rulerExpr(10);
						}
						break;

					case 5:
						{
						_localctx = new XorRuleContext(new RulerExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ReColParser.RULE_rulerExpr);
						this.state = 234;
						if (!(this.precpred(this._ctx, 8))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 8)");
						}
						this.state = 235;
						this.match(ReColParser.T__12);
						this.state = 236;
						this.rulerExpr(9);
						}
						break;

					case 6:
						{
						_localctx = new XorRuleContext(new RulerExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ReColParser.RULE_rulerExpr);
						this.state = 237;
						if (!(this.precpred(this._ctx, 7))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
						}
						this.state = 238;
						this.match(ReColParser.T__13);
						this.state = 239;
						this.rulerExpr(8);
						}
						break;

					case 7:
						{
						_localctx = new FollowRuleContext(new RulerExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ReColParser.RULE_rulerExpr);
						this.state = 240;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 241;
						this.match(ReColParser.T__15);
						this.state = 242;
						this.rulerExpr(5);
						}
						break;

					case 8:
						{
						_localctx = new UntilRuleContext(new RulerExprContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, ReColParser.RULE_rulerExpr);
						this.state = 243;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 244;
						this.match(ReColParser.T__16);
						this.state = 245;
						this.rulerExpr(4);
						}
						break;
					}
					}
				}
				this.state = 250;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 30, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public boolexpr(): BoolexprContext {
		let _localctx: BoolexprContext = new BoolexprContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, ReColParser.RULE_boolexpr);
		try {
			this.state = 300;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 31, this._ctx) ) {
			case 1:
				_localctx = new CheckLargerContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 251;
				this.expr(0);
				this.state = 252;
				this.match(ReColParser.GT);
				this.state = 253;
				this.expr(0);
				}
				break;

			case 2:
				_localctx = new CheckLargerContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 255;
				this.expr(0);
				this.state = 256;
				this.match(ReColParser.T__19);
				this.state = 257;
				this.expr(0);
				}
				break;

			case 3:
				_localctx = new CheckGEContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 259;
				this.expr(0);
				this.state = 260;
				this.match(ReColParser.GE);
				this.state = 261;
				this.expr(0);
				}
				break;

			case 4:
				_localctx = new CheckGEContext(_localctx);
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 263;
				this.expr(0);
				this.state = 264;
				this.match(ReColParser.T__20);
				this.state = 265;
				this.expr(0);
				}
				break;

			case 5:
				_localctx = new CheckLessContext(_localctx);
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 267;
				this.expr(0);
				this.state = 268;
				this.match(ReColParser.LT);
				this.state = 269;
				this.expr(0);
				}
				break;
